--- a/.github/workflows/okx.yml
+++ b/.github/workflows/okx.yml
@@ -8,8 +8,11 @@ on:
 jobs:
   run:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
+        with:
+          persist-credentials: true
 
       - uses: actions/setup-python@v5
         with:
@@ -25,7 +28,10 @@ jobs:
           TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
           TG_CHAT_ID: ${{ secrets.TG_CHAT_ID }}
 
-      - uses: actions/upload-artifact@v4
-        with:
-          name: state
-          path: state.json
+      - name: Commit state.json
+        run: |
+          git config user.name "okx-bot"
+          git config user.email "bot@github"
+          git add state.json
+          git commit -m "Update state $(date -u +'%Y-%m-%d %H:%M')" || echo "No changes"
+          git push
