Fix workflow permissions: allow git push from Actions

--- a/.github/workflows/okx.yml
+++ b/.github/workflows/okx.yml
@@ -1,25 +1,72 @@
+# ============================================================
+# ФАЙЛ: okx_bot.yml
+# НАЗВА: OKX Bot
+#
+# ОПИС (по міліметрах):
+# - GitHub Actions workflow для запуску OKX депозитного бота
+# - Працює за розкладом (cron) та вручну (workflow_dispatch)
+# - Запускає main.py
+# - Зберігає стан роботи у state.json
+# - Робить git commit + git push цього state.json
+#
+# КРИТИЧНО:
+# permissions: contents: write
+# -> без цього github-actions[bot] НЕ має права робити push (403)
+# ============================================================
+
 name: OKX Bot
 
+# ------------------------------------------------------------
+# ПРАВА ДОСТУПУ ДЛЯ GITHUB ACTIONS
+# Дозволяємо запис у репозиторій (git push)
+# ------------------------------------------------------------
+permissions:
+  contents: write
+
+# ------------------------------------------------------------
+# ТРИГЕРИ ЗАПУСКУ
+# ------------------------------------------------------------
 on:
+  # Автоматично кожні 15 хвилин
   schedule:
     - cron: "*/15 * * * *"
+
+  # Ручний запуск з GitHub UI
   workflow_dispatch:
 
+# ------------------------------------------------------------
+# JOB: run
+# ------------------------------------------------------------
 jobs:
   run:
     runs-on: ubuntu-latest
 
     steps:
+      # --------------------------------------------------------
+      # КРОК 1: Checkout репозиторію
+      # persist-credentials: true
+      # -> використовує GITHUB_TOKEN для push
+      # --------------------------------------------------------
       - uses: actions/checkout@v4
         with:
           persist-credentials: true
 
+      # --------------------------------------------------------
+      # КРОК 2: Встановлення Python
+      # --------------------------------------------------------
       - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
+      # --------------------------------------------------------
+      # КРОК 3: Встановлення залежностей
+      # --------------------------------------------------------
       - run: pip install -r requirements.txt
 
+      # --------------------------------------------------------
+      # КРОК 4: Запуск бота
+      # Всі секрети передаються через GitHub Secrets
+      # --------------------------------------------------------
       - run: python main.py
         env:
           OKX_API_KEY: ${{ secrets.OKX_API_KEY }}
@@ -28,6 +75,11 @@ jobs:
           TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
           TG_CHAT_ID: ${{ secrets.TG_CHAT_ID }}
 
+      # --------------------------------------------------------
+      # КРОК 5: Commit + push state.json
+      # - Якщо змін нема → workflow не падає
+      # - state.json стає постійною памʼяттю бота
+      # --------------------------------------------------------
       - name: Commit state.json
         run: |
           git config user.name "okx-bot"
